' Generated by UML Generator
' Encoded: bL4xJyCm4DxzAsvCrAHYpb0LmSA6LCI262xsARNm8x8lI53ARyTEI6cKYSMIlxllfTj7ni23DIA-QTTZG0lIO8otp46t0zE3zEwWFmbkn54h0gc3D2G4jf43IfxMuPcEEk5m4W3VRK2d6ZWa2TTbm7f5vXgGtlXm1THrUZQ_8iM2Ny62NS62Mugp45E4EmoZVTtbxzD7Jok3jF8VyGfMKcMMwOZlYL6RMCWc-vODl7kjycpe5J8LQ-BV2li9AifBm4k9n-1RGtOiiZcbwx2MPx2eNO6XYpFXvNNMIynSlAw_TlCHHc2xtULaOazEfVl-00
' URL: http://www.plantuml.com/plantuml/uml/bL4xJyCm4DxzAsvCrAHYpb0LmSA6LCI262xsARNm8x8lI53ARyTEI6cKYSMIlxllfTj7ni23DIA-QTTZG0lIO8otp46t0zE3zEwWFmbkn54h0gc3D2G4jf43IfxMuPcEEk5m4W3VRK2d6ZWa2TTbm7f5vXgGtlXm1THrUZQ_8iM2Ny62NS62Mugp45E4EmoZVTtbxzD7Jok3jF8VyGfMKcMMwOZlYL6RMCWc-vODl7kjycpe5J8LQ-BV2li9AifBm4k9n-1RGtOiiZcbwx2MPx2eNO6XYpFXvNNMIynSlAw_TlCHHc2xtULaOazEfVl-00
' Generated on: 2025-11-25T12:11:36.820857212

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Vehicle {
  ~brand: String
  ~model: String
  ~color: String
  --
  +Vehicle(brand: String, model: String, color: String)
}

class Car {
  -glassType: String
  --
  +Car(brand: String, model: String, color: String, glassType: String)
  +getDetails(c: Car): void
  +update(glassType: String): void
  +toString(): String
}

class Problem {
  +{static} main(args: String[]): void
}

Car --|> Vehicle
Car ..> Car
@enduml